--- a/bahamut/P2.html
+++ b/bahamut/P2.html
@@ -196,6 +196,7 @@
 									<li>巴哈姆特之爪</li>
 									<br>
 									<li>火连线+双雷</li>
+									<br>
 									<li>奈尔台词：减伤分摊+远离/靠近</li>
 									<li>死亡宣告踩圈*3</li>
 									<li>火连线</li>
@@ -207,7 +208,7 @@
 									<li>凶鸟尖喙→换T</li>
 									<br>
 									<li>-P3·俯冲阶段-</li>
-									<li>奈尔台词：远离主T+减伤分摊/全员分散+远离MT</li>
+									<li>奈尔台词：(MT远离+减伤分摊)/(全员分散+远离MT)</li>
 									<br>
 									<li>俯冲结束</li>
 									<li>奈尔台词：任意</li>
@@ -321,7 +322,7 @@
 									<br>
 									<p>如果是钢铁战车，那么所有人先远离BOSS躲开钢铁战车，然后在BOSS面前集合分摊火圈。这里注意，两个被雷点名的人在远离BOSS的时候，最好偏向集合的一侧远离，防止火圈来不及回到集合位置分摊。</p>
 									<br>
-									<p>第一句台词只会伴随6秒和10秒两个死亡宣告点名。分摊完火圈后第一个白圈爆炸，6秒死亡宣告的玩家去踩白圈消除，紧接着第二个白圈爆炸，10秒死亡宣告的玩家去踩白圈消除。最后BOSS会对MT使用五连巴哈姆特之爪，标志着进入第二句台词。</p>
+									<p>第一句台词只会伴随6秒和10秒两个死亡宣告点名，并且是在冰火雷机制结束后才出现，因此比较简单，算是给玩家练习：分摊完火圈后第一个白圈爆炸，6秒死亡宣告的玩家去踩白圈消除，紧接着第二个白圈爆炸，10秒死亡宣告的玩家去踩白圈消除。被点名的玩家最后BOSS会对MT使用五连巴哈姆特之爪，标志着进入第二句台词。</p>
 									<br>
 									<hr>	
 									<br>
@@ -335,7 +336,7 @@
 									<br>
 									<p>随后会出现三次救赎之翼的白圈，这一次死亡宣告的时间依次为6/10/16秒，玩家根据时间的多少依次踩白圈处理。</p>
 									<br>
-									<p>在第二个光圈爆炸的同时会出现第三次冰火雷点名。雷点名的玩家远离人群，其余玩家站在BOSS正面分摊火圈即可。由于火圈在最后一个判定的，雷点名的玩家诱导完雷圈，三名死亡宣告的玩家确认自己消除BUFF后，再回到人群分摊火圈即可。（优先处理死亡宣告和雷圈，即使第三次没踩到火圈，也可以在第四次进行补救）</p>
+									<p>在第二个光圈爆炸的同时会出现第三次冰火雷点名，也是最难的一次，这一次光暗点名和冰火雷点名将会同时进行，因此运气不好一名玩家可能需要处理若干个机制。这里雷点名的玩家远离人群，其余玩家站在BOSS正面分摊火圈即可。由于火圈在最后一个判定的，假设死亡宣告的玩家中了雷，那么每个人的处理顺序应该是：6秒死亡宣告：踩第一个白圈→放雷→分摊火。10秒死亡宣告： 踩第二个白圈→放雷→分摊火。15秒死亡宣告：放雷→踩第三个白圈→分摊火。（优先处理死亡宣告和雷圈，即使第三次没踩到火圈，也可以在第四次进行补救）</p>
 									<br>
 									<p>火分摊后BOSS再次对MT使用巴哈姆特之爪，标志进入第三句台词。</p>
 									<br>
@@ -347,8 +348,14 @@
 									<br>
 									<p>也就是全员分散+远离/靠近BOSS。所有人先按分好的位置分散好，防止凶鸟冲靠的太近而被击退。凶鸟冲后，所有人根据台词决定是远离BOSS躲避钢铁战车或者靠近BOSS处理月流电圈。紧接着是火连线+双雷点名。火分摊依旧是在BOSS位置分摊，这里火连线分摊是为了防止前面有人错过火圈而做的保险，如果前面该分摊的时候都分摊到了，那么这次不分摊也没有关系。而这一次双雷的判定会比火圈判定晚，因此雷点名的玩家在火圈分摊后立刻远离人群即可（如果之前都处理正确，也可以不分摊直接远离人群诱导雷圈）。</p>
 									<br>
-									<p>最后是三次救赎之翼，跟之前一样按持续时间不同依次解除BUFF。处理完纳尔会对MT读条“凶鸟尖喙”，ST嘲讽换坦，标志台词阶段结束正式进入小龙俯冲阶段。</p>
+									<p>三次救赎之翼会在最后出现，不会与冰火雷重叠，因此比较简单，跟之前一样按持续时间不同依次解除BUFF。处理完纳尔会对MT读条“凶鸟尖喙”，ST嘲讽换坦，标志台词阶段结束正式进入小龙俯冲阶段。</p>
+									<hr>
 									<br>
+									<p>简单总结一下流程：</p><br>
+									<li>第一次冰火雷：固定两种模式</li>
+									<li>第二次冰火雷（简单无台词）：火出去+雷远离</li>
+									<li>第三次冰火雷（最难）：先处理台词→踩白圈+雷分散→火分摊</li>
+									<li>第四次冰火雷（简单）：先处理台词→火分摊→雷分散→踩白圈</li><br>
 									<hr>
 									<h2>P3·小龙俯冲</h2>
 									<h3>新增技能</h3>
@@ -357,14 +364,17 @@
 									<h3>阶段详解</h3>
 									<h4>核心机制·小龙俯冲</h4>
 									<h5>机制分析</h5>
-									<p></p>
 									<p>P2开场，BOSS在读条龙神的加护后，场外会出现5条小龙。在P3俯冲阶段，将会有3名玩家被点名俯冲标记。接着，这五条小龙将会按顺时针2-1-2的顺序，从12点开始依次对标记消失的位置进行俯冲。也就是说，从12点开始顺时针第一二条龙将会俯冲第一个标记消失处，第三条龙俯冲第二个标记消失处，最后两条龙俯冲第三个标记消失处。</p>
 									<h5>处理方法</h5>
 									<p>如下图所示，首先标记第一组两条小龙：根据场地标点A迅速确定12点，然后顺时针找到2条小龙。如果两只小龙距离较近，就将标记放在两只小龙的一侧，反之则将标记放在两只小龙的之间。</p>
 									<p>接着标记第二组一条小龙：找到第三只小龙，将标记放在小龙的一侧。</p>
 									<p>最后标记第三组两条小龙：找到最后两条小龙，同第一组的标记方式相同处理。</p>
-
-									<br>
+									<p>在俯冲点名消失前，BOSS会对点名的玩家使用超新星，玩家需要在标记点附近移动，躲开超新星，在俯冲标记消失后再回人群。提前回来会导致俯冲范围变大。</p>
+									<h5>俯冲阶段的台词</h5>
+									<p>在俯冲阶段开始时，纳尔同样会说出一句台词，这次固定两种模式，陨石流+月华冲或者月华冲+热离子光束。如果是前者，则在俯冲标记出现后，所有人在场中间小范围分散，处理陨石流，同时不要被俯冲到。然后保持远离MT直到月华冲结束。如果是后者，则所有人在场地正中间，MT单独远离人群引导月华冲，月华冲出现后，MT立刻回到人群一起分摊热离子光束。</p>
+									
+									<h2>P4·俯冲结束后</h2>
+									<p>俯冲结束后就是奈尔阶段的结尾，BOSS会使用任意一种台词，由于俯冲后不会再有冰火雷，因此处理起来很容易。台词后是凶鸟尖喙（换T）+巴哈姆特之爪。如果奈尔血量没有降至0，那么他会读条百万核爆强制灭团，否则他将飞走，标志进入P3巴哈姆特阶段。</p>
 								</div>
 							</div>
 						</article>
