--- a/bahamut/Bahamut - Copy.html
+++ b/bahamut/Bahamut - Copy.html
@@ -312,12 +312,8 @@
 									<p class="attention-part">※换坦后之前的主坦第一时间远离正面躲开顺劈。</p>
 									<p class="attention-part">※治疗注意「垂直下落」和「普攻」可能会同时判定导致MT瞬间大出血。</p><br>
 									<p>在「垂直下落」后，会循环开场的「火球+旋风」，一般队伍可以在「火球+旋风」前后进入下一阶段。</p><br>
-									<div class="paragraph-title">
-										<div class="paragraph-title-content">
-										<img src="img/p1/p1-2.png" class="paragraph-title-img">	
-										</div>
-										<div class="title-hr"></div>
-									</div>
+									<hr />
+									<h3>第一个『拘束装置』掉落后(74%～44%)</h3>
 									<h4>新增技能</h4>
 									<li>液体地狱：诱导机制。BOSS对远处的玩家使用五连喷，每次造成2k左右的伤害并在玩家脚下留下一个
 										<a  class="img-hover-area" name="firecircle">
@@ -390,12 +386,8 @@
 										</div>
 									</div>
 									<p>随后是第二次「垂直下落」，正常情况下此时BOSS会掉落第二个『拘束装置』进入P1最后阶段，MT立刻将BOSS拉到最后一个标记处。</p><br>
-									<div class="paragraph-title">
-										<div class="paragraph-title-content">
-										<img src="img/p1/p1-3.png" class="paragraph-title-img">	
-										</div>
-										<div class="title-hr"></div>
-									</div>
+									<hr />
+									<h3>第二个『拘束装置』掉落后(44%～0%)</h3>
 									<h4>技能改动</h4>
 									<li>液体地狱：诱导+随机机制。这个阶段液体地狱总是成对出现——第一次为诱导机制，同上一阶段。第二次为随机机制，BOSS将会随机瞄准一名玩家，与距离无关。</li>
 									<li>魔力炼成*2：诱导机制。这个阶段将会点名2名DPS，同时生成2个黑球。由于黑球是AOE范围伤害并且会附加<a  class="status-area"  name="ManaHypersensitivity">
@@ -426,13 +418,9 @@
 									<p>最后是一次「垂直下落」，结束后进入循环——</p>
 									<p>「液体地狱（诱导）+黑球」→「液体地狱（诱导）+火球」→第四次死刑+顺劈→黑球+旋风。</p><br>
 									<p>一般队伍能在2:50秒左右结束战斗，随后双塔尼亚将会飞走，标志P1结束。否则3:00时双塔尼亚将会变得不可选中并读条「以太狂暴」团灭队伍。</p><br>
-									<div class="paragraph-title">
-										<div class="paragraph-title-content">
-										<img src="img/p1/p1-fulltimeline.png" class="paragraph-title-img">	
-										</div>
-										<div class="title-hr"></div>
-									</div>
-									<div id="p1-timeline-area" class="timeline-area"></div><br><br><br><br><br><br><br><br>
+									<hr />
+									<h3>p1完整时间轴</h3>
+									<div id="p1-timeline-area" class="timeline-area"></div>
 								</div>
 							</div>
 						</article>
