--- a/bahamut/Bahamut-p2.html
+++ b/bahamut/Bahamut-p2.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/vis-global.css">
 	<link rel="stylesheet" type="text/css" href="css/content.css">
 	<link rel="stylesheet" type="text/css" href="css/status.css">
+	<link rel="stylesheet" type="text/css" href="css/edit-vis.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="https://momentjs.com/downloads/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
@@ -224,24 +225,24 @@
 									<br>
 									<li>-P2·龙神的加护-</li>
 									<li>双雷+月环+火连线</li>
-									<li>奈尔台词：月环+减伤分摊/远离</li>
+									<li>奈尔台词：月流电圈+热离子光束/钢铁战车</li>
 									<li>死亡宣告踩圈*2</li>
 									<li>巴哈姆特之爪</li>
 									<br>
 									<li>火连线+双雷</li>
 									<br>
-									<li>奈尔台词：减伤分摊+远离/靠近</li>
+									<li>奈尔台词：热离子光束+钢铁战车/月流电圈</li>
 									<li>死亡宣告踩圈*3</li>
 									<li>火连线</li>
 									<li>巴哈姆特之爪</li>
 									<br>
-									<li>奈尔台词：分散+分散/靠近</li>
+									<li>奈尔台词：凶鸟冲+钢铁战车/月流电圈</li>
 									<li>双雷+火连线</li>
 									<li>死亡宣告踩圈*3</li>
 									<li>凶鸟尖喙→换T</li>
 									<br>
 									<li>-P3·俯冲阶段-</li>
-									<li>奈尔台词：(MT远离+减伤分摊)/(全员分散+远离MT)</li>
+									<li>奈尔台词：(陨石流+月华冲)/(月华冲+热离子光束)</li>
 									<br>
 									<li>俯冲结束</li>
 									<li>奈尔台词：任意</li>
@@ -256,15 +257,61 @@
 										<div class="title-hr"></div>
 									</div>
 									<h4>基本技能</h4>
-									<li>天崩地裂:开场技能，场地正中央落下一把巨剑，击退所有玩家并造成基于距离衰减的伤害。巨剑落下的范围为即死区域。随后场地出现「热离子爆发」的发光区域将场地十六等分，短暂延迟后发光区域爆炸，对踩在上面的额外玩家造成即死程度的伤害并附加麻痹效果。第一次爆炸结束后，发光区域和未发光区域将会互换，然后判定第二次「热离子爆发」。
+									<li>天崩地裂:开场技能，场地正中央落下一把
+										<a  class="img-hover-area" name="skyfall">
+											<img src="img/hover-sign.png" alt="">
+											&nbsp;&nbsp;&nbsp;巨剑
+										</a>，击退所有玩家并造成基于距离衰减的伤害。巨剑落下的方形范围为即死区域。随后场地出现
+										<a  class="img-hover-area" name="plasmaburst">
+											<img src="img/hover-sign.png" alt="">
+											&nbsp;&nbsp;&nbsp;热离子爆发
+										</a>
+										的发光区域将场地十六等分，短暂延迟后发光区域爆炸，对踩在上面的额外玩家造成即死程度的伤害并附加麻痹效果。第一次爆炸结束后，发光区域和未发光区域将会互换，然后判定第二次热离子爆发。
 									<li>陨石流：分散机制。BOSS首先点名四名玩家，以玩家为中心造成圆形小范围伤害（判定范围约暗影核爆大小）。随后点名另外四名玩家，造成同样的效果，如果队伍有人死亡，则一名玩家将会被点名复数次陨石流。无减伤的情况下，陨石流的伤害在3w1～3w6左右，因此玩家必须彼此分散。</li>
 									<li>月华冲：小范围的死刑技能。BOSS从主坦位置落下，以MT为中心，造成小范围的特大伤害（判定范围约暗影核爆大小）。无任何减伤的情况下，月华冲的伤害在5w左右。其余玩家需要与MT保持足够的距离，避免被秒杀。</li>
-									<li>巴哈姆特之爪：无读条的死刑。对当前MT连续进行五次攻击，每次伤害在1w左右，这个技能的持续时间约为4秒。由于普攻的攻击间隔为3秒，伤害在1w左右，而巴哈姆特之爪非咏唱技能，因此实际上这个技能可以看做巴哈姆特之爪+两次普攻，伤害会比预想的要高。
+									<li>巴哈姆特之爪：无读条的死刑。对当前MT连续进行五次攻击，每次伤害在1w左右，这个技能的持续时间约为4秒。
+										<p class="attention-part">※由于普攻的攻击间隔为3秒，伤害也在1w左右，而巴哈姆特之爪非咏唱技能，因此实际上这个技能可以看做巴哈姆特之爪+两次普攻，伤害会比预想的要高。
+										</p>
 									</li>
 									<h4>阶段详解</h4>
-									<p>开场的天崩地裂有很多站法，核心在于全员受到击退伤害后，治疗能够第一时间将全员群抬到接近满血，并且所有人能够迅速的分散。这里介绍一种站位方法：首先将全员分成三组，两个坦克1组，1H+2DPS组成2组，分别站在三个拘束装置内。根据这三个拘束装置站位，能够保证每次天崩地裂的伤害比较稳定。2名治疗做好预读，保证击退后全员血量能吃下陨石流。每组成员在击退后按既定位置大致分散引导陨石流即可。</p><br>
-									<p>如果预读失败，治疗被击退了无法奶到远处的玩家，直接就近抬血即可。由于DPS与治疗在同一组，因此不会出现加不到DPS的情况。</p><br>
-									<p>正常情况下，天崩地裂大概会造成1w～1w5左右的伤害，如果伤害过高，请调整集合点尽可能贴近场中间，或是检查全员的血量以及盾类BUFF是否足够。</p>
+									<p>开场的天崩地裂有很多站法，核心在于全员受到击退伤害后，治疗能够第一时间将全员群抬到接近满血，并且所有人能够迅速的分散。这里介绍两种比较普遍的站法，第一种是集合站位——进入P2后全员选定一个拘束装置集合，骑士可以开启武装戍卫。击退后，再按事先分好的位置疾跑散开。</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/skyfall-1.png" alt="">
+										<div>
+											<li class="text-align-center">
+											※左图：固定一个标记点（拘束装置处）集合，等待被天崩地裂击退。
+											</li>
+											<li class="text-align-center">
+											※右图：击退后，按各自分好的位置散开处理陨石流，距离远的最好提前开启疾跑。
+											</li>
+											<li class="text-align-center">
+											※最好将BOSS引导都场地中间，因此让当前的MT（如图中战士）回到中间。图中站位仅作参考，开荒时请自行调整。
+											</li>
+										</div>
+									</div>
+									<p class="attention-part">※集合站位好处在于骑士可以开启武装戍卫减少击退伤害。但是有的玩家分散的距离较长，需要提前开启疾跑跑到相应位置。
+									</p><br>
+									<p>第二种是三分站位——双坦一组，2DPS+1H分成两组，分别在三个拘束装置站好。击退后就近左右/前后分散即可。</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/skyfall-2.png" alt="">
+										<div>
+											<li class="text-align-center">
+											※左图：全员分成三组，两个坦克1组，1H+2DPS组成2组，分别站在三个拘束装置内。
+											</li>
+											<li class="text-align-center">
+											※右图：击退后，按各自分好的位置散开处理陨石流。
+											</li>
+											<li class="text-align-center">
+											※最好将BOSS引导都场地中间，因此让当前的MT（如图中战士）回到中间。图中站位仅作参考。如果击退后治疗需要原地奶人，可以让其他玩家远离。
+											</li>
+										</div>
+									</div>
+									<p class="attention-part">※三分站位好处在于分散的距离很短，不会出现某个玩家没有及时跑远而与其他人重叠站位的情况。
+									</p><br>
+									<p>一般治疗需要学会在天崩地裂时预读群刷/全大赦。如果预读失败，治疗被击退了无法奶到远处的玩家，直接就近抬血即可。由于DPS与治疗在同一组，因此不会出现加不到DPS的情况。如果时间允许，也可以立刻靠近中间群刷。</p><br>
+									<p>正常情况下，天崩地裂大概会造成1w～1w5左右的伤害，如果伤害过高，请调整集合点尽可能贴近场中间，或是检查全员的血量以及盾类BUFF是否足够。</p><br>
+									<p>陨石流结束后，是对当前MT的月华冲+巴哈姆特之爪。如果此时是骑士MT，可以开启无敌，否则请开启足够减伤。如果担心后续减伤不足，巴哈姆特之爪结束后可以进行换T处理。随后BOSS将读条龙神的加护，进入奈尔的第二阶段。</p>
+
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
 										<img src="img/p2/p2-2.png" class="paragraph-title-img">	
@@ -291,7 +338,7 @@
 											<img src="img/status/Thunderstruck.png" alt="">
 											&nbsp;&nbsp;&nbsp;雷翼
 										</a>
-										效果——效果结束时将对周围小范围玩家造成致死等级的伤害并附加麻痹效果。因此被点名的玩家需要远离人群。
+										效果,持续5秒——效果结束时将对周围小范围玩家造成致死等级的伤害并附加麻痹效果。因此被点名的玩家需要远离人群。
 									</li>
 									<li>死亡风暴：暗龙随机点名复数名玩家，对这些玩家附加
 										<a  class="status-area" name="Doom">
@@ -300,41 +347,54 @@
 										</a>
 										状态，持续时间依次为6/10/16秒——效果结束时将对周围小范围玩家造成致死等级的伤害并附加麻痹效果。
 									</li>
-									<li>救赎之翼：光龙随机点名一名玩家脚下出现光圈，短暂延迟后光圈爆炸，秒杀踩在上面的玩家，并在原地留下一个白圈。踩在白圈上可以解除暗龙的死亡宣告效果。
+									<li>救赎之翼：光龙随机点名一名玩家脚下出现光圈，短暂延迟后光圈爆炸，秒杀踩在上面的玩家，并在原地留下一个白圈。玩家踩在白圈上可以解除自身的
+										<a  class="status-area" name="Doom">
+											<img src="img/status/Doom.png" alt="">
+											&nbsp;&nbsp;&nbsp;死亡宣告
+										</a>
+										。
 									</li>
 									<h4>BOSS新增技能</h4>
 									<li>月流电圈：跑位机制。BOSS以自身为中心使用的大范围环形AOE，需要玩家站在BOSS判定圈内或者尽可能远离BOSS。</li>
 									<li>钢铁战车：跑位机制。BOSS以自身为中心使用的中等范围圆形AOE（约野战治疗阵大小），对范围内的玩家造成大量伤害并击退到场地边缘，需要玩家在技能判定前提前远离BOSS。</li>
-									<li>热离子光束：分摊机制。BOSS随机对一名玩家使用的小范围AOE，造成大量伤害，需要由所有玩家站在一起分摊。</li>							
-									<li>凶鸟冲：分散机制。BOSS随机跳到一名玩家所在位置，造成轻微伤害并击退小范围内的其余玩家，因此所有玩家需要提前分散。</li>
-									<li>凶鸟尖喙：4秒读条的坦克死刑，换坦机制。对当前坦克造成特大「物理伤害」，并附加一层
+									<li>热离子光束：分摊机制，魔法伤害。BOSS随机对一名玩家使用的小范围AOE，造成大量伤害，尽可能全员站在一起分摊。</li>							
+									<li>凶鸟冲：分散机制，物理伤害。BOSS随机跳到一名玩家所在位置，造成轻微伤害并击退小范围内的其余玩家，因此所有玩家需要提前分散，防止被击退到边缘死亡。</li>
+									<li>凶鸟尖喙：4秒读条的坦克死刑，换坦机制，物理伤害。对当前坦克造成特大伤害，并附加一层
 										<a  class="status-area" name="PiercingResistanceDownII">
 											<img src="img/status/PiercingResistanceDownII.png" alt="">
 											&nbsp;&nbsp;&nbsp;突刺耐性大幅降低
 										</a>
-										效果。</li>
-									<h3>阶段详解</h3>
+										效果。
+									</li><br>
+									<hr><br>
+									<p>P2阶段，奈尔将会在龙神的加护下，使用上述技能的各种组合。下面会详细解释每种核心机制的处理方法。</p>
 									<h4>核心机制一·冰火点名</h4>
-									<h5>机制分析</h5>
-									<p>整个P2一共有4次火连线，而每次火连线之前，都将会有4名玩家被点名冰球。玩家会被固定分成两组，按分组顺序点名冰球，也就是说，如果玩家在第一次火线被点名了冰球，除非出现减员，否则必定在第三次火线时再次被点名冰球。</p>
-									<p>另外，在第四次火线结束后，所有玩家将会再次被一轮冰球。</p>
+									<h5>※机制分析</h5>
+									<p>如下图的冰火时间轴所示，整个P2一共有4次火连线，而每次火连线之前，都将会有4名玩家被点名冰球。玩家会被固定分成两组，按分组顺序点名冰球，也就是说，如果玩家在第一次火分摊前被点名了冰球，除非出现减员，否则必定在第三次火分摊前再次被点名冰球。</p><br>
+									<p>另外，在第四次火线结束后，所有玩家将会再次被一轮冰球。</p><br>
 									<p>根据这个顺序可以知道，每个玩家至少吃两轮火球，至多吃三轮火球。</p>
-									<h5>处理方法</h5>
+									<div id="p2.2-timeline-area" class="timeline-area"></div>
+									<div class="figure aligncenter">
+										<div>
+											<li>※P2冰火点名时间轴</li>
+										</div>
+									</div>
+									<h5>※处理方法</h5>
 									<p>理解机制后玩家可以根据队伍情况决定吃火球的顺序。</p>
-									<p>这里推荐采用：进-出-进-进的策略，也就是除了第二次火连线的人单独出去以外，其余火连线均分摊。这样即使过程中队伍出现1～2名减员，也能保证不会出现冰点名猝死的情况。第四次的分摊时为了防止前面火连线有人没分摊到的情况下补BUFF，如果前面均处理正确，第四次是否分摊不重要。这里注意，第二次火连线的玩家可以不参与后续的分摊，分摊则最多只能再分摊一次（否则就变成进-进-进-进而连续吃到两个火BUFF）。</p>
-									<p>冰与火的处理完全取决于个人，如果你理解了机制，你可以完全根据实际情况考虑如何分摊火。这里给出的策略只是作为一种参考。</p>
-									<h4>核心机制二·雷点名</h4>
-									<h5>处理方法</h5>
-									<p>基本处理思路是两个雷点名的玩家及时远离人群即可。但雷点名时可能会出现两种情况，第一种情况是BOSS同时使用了月流电圈，此时所有玩家在BOSS面前集合，而雷点名的两名玩家去左上和右上放雷，如下图所示。第二种是火连线分摊+雷点名的情况，有雷BUFF的玩家需要在分摊完火圈后第一时间远离人群，两个点名玩家事先沟通好分散位置即可。如果来不及交流，也可以直接按凶鸟冲的分配位置分散。</p>
-
-									<h4>核心机制三·光暗点名</h4>
+									<p>这里推荐采用：进-出-进-进的策略，也就是除了第二次火连线的人单独出去以外，其余火连线均分摊。这样即使过程中队伍出现1～2名减员，也能保证不会出现冰点名猝死的情况。第四次的分摊时为了防止前面火连线有人错过的情况下补BUFF，如果前面均处理正确，第四次是否分摊不重要。这里注意，第二次火连线的玩家可以不参与后续的分摊，分摊则最多只能再分摊一次（否则就变成进-进-进-进而连续吃到两个火BUFF）。</p><br>
+									<p class="attention-part">※冰与火的处理完全取决于个人，如果你理解了机制(有冰补火)，你可以完全根据实际情况考虑如何分摊火。这里给出的策略只是作为一种队伍统一行动的参考。
+									</p><br>
+									<hr>
+									<h4>核心机制二·光暗点名</h4>
 									<h5>机制分析</h5>
 									<p>死亡宣告一共会出现三轮，第一轮是两名玩家，后两轮是三名玩家。由于每名玩家死亡宣告的持续时间不同（6秒/10秒/16秒），白圈出现的时间也有先后顺序，因此BUFF时间短的玩家需要踩先出现的白圈。</p>
 									<h5>处理方法</h5>
-									<p>及时看清自身BUFF的持续时间踩对应的白圈。（你也可以使用ACT的触发器功能监控）</p>
-
-									<h4>核心机制四·奈尔的台词</h4>
-									<h5>机制分析</h5>
+									<p>及时看清自身BUFF的持续时间踩对应的白圈。（你也可以使用ACT的触发器功能监控）</p><br>
+									<p class="attention-part">※由于光暗点名总是在冰火雷点名过程中出现，因此处理的重点在于“头脑清醒”——看清死亡宣告的持续时间，根据时间想好「分摊火/放雷/踩白圈」的先后顺序。具体的处理方法将会在阶段详解中详细说明。
+									</p><br>
+									<hr>
+									<h4>核心机制三·奈尔的台词</h4>
+									<h5>※机制分析</h5>
 									<p>在BOSS的新增技能中，除了凶鸟尖喙外，其余的技能都没有任何读条/范围提示，需要根据奈尔的台词来判断她接下来使用的技能组合。</p><br>
 									<p>"O red moon, scorch my enemies!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+热离子光束</p>
 									<p>"O red moon, shine the path to conquest!"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+钢铁战车</p>
@@ -344,55 +404,109 @@
 									<p>"From on high I descend, in blessed light to bask!"&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
 									<p>"Fleeting light, score the earth with a fiery kiss!" &emsp;——&emsp;月华冲+热离子光束</p>
 									<p>"Fleeting light, outshine the stars for the moon!" &emsp;&emsp;——&emsp;陨石流+月华冲</p>
-									<h5>处理方法</h5>
+									<h5>※处理方法</h5>
 									<p>台词将会以气泡的样式显示在BOSS头上和聊天框中，这里推荐使用ACT监控或者由一名玩家来报机制。</p><br>
-									<hr>
-									<h3>流程详解</h3>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p2/p2-2-1.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
+									<p>龙神的加护过程中，一共有4次冰火雷点名+3次奈尔台词。在这里，我们分为四部分进行说明。</p>
+									<h4>第一次冰火雷+奈尔台词</h4>
 									<p>第一句台词为下面两种二选一：</p>
 									<p>"O red moon, scorch my enemies!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+热离子光束</p>
 									<p>"O red moon, shine the path to conquest!"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+钢铁战车</p><br>
 									<p>也就是月环后接分摊或者远离。同时这个过程中会出现冰火雷光暗的点名。我们来分解一下这个部分的处理。</p>
+									<div id="p2.3-timeline-area" class="timeline-area"></div>
+									<div class="figure aligncenter">
+										<div>
+											<li>※P2第一次冰火雷点名完整时间轴</li>
+										</div>
+									</div>
+									<p>首先是双雷点名+月环。两个被雷点名的玩家站在BOSS左上方和右上方，其余人站在BOSS正面，如下图所示三角站位。</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/lunarthunder.png" alt="">
+										<div>
+											<li>※「双雷+月流电圈」三分站位图示。</li>
+										</div>
+									</div>
 									<br>
-									<p>首先是双雷点名+月环。根据之前所说的，两个被雷点名的玩家站在BOSS左上方和右上方，其余人站在BOSS正面，如下图所示三角站位。</p>
+									<p>接着是热离子光束/钢铁战车+光暗点名+火线判定。为了确保能分摊到火，根据台词是热离子光束或者钢铁战车，我们分成以下两种移动方式。</p><br>
+									<p>※月流电圈+钢铁战车时，光暗点名+火分摊示意图:</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/icefire-1-1.png" alt="">
+										<div>
+											<li>※左图：月流电圈+双雷判定后，玩家远离BOSS躲开钢铁战车。</li>
+											<li>※中图：钢铁战车结束后，所有人回到BOSS正面准备分摊火圈，同时两名玩家被点名死亡宣告。</li>
+											<li>※右图：集合分摊火圈时，原来分散的位置将会出现第一个救赎之翼的白圈。<br>在分摊火圈后，6秒死亡宣告的玩家去踩第一个白圈。</li>
+											<li>※后续第二个白圈由于没有冰火雷要注意，躲开即可，不作说明。</li>
+										</div>
+									</div>
+									<p>※月流电圈+热离子光束时，光暗点名+火分摊示意图:</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/icefire-1-2.png" alt="">
+										<div>
+											<li>※左图：月流电圈+双雷判定后，雷点名玩家回人群分摊热离子光束。</li>
+											<li>※中图：热离子光束分摊后，所有人径直穿过BOSS躲开第一个白圈，同时分摊火连线。</li>
+											<li>※右图：集合分摊火圈后，6秒死亡宣告的玩家去踩第一个白圈。<br>
+											<li>※后续第二个白圈由于没有冰火雷要注意，躲开即可，不作说明。</li>
+										</div>
+									</div>
+									<p>第一句台词只会伴随6秒和10秒两个死亡宣告点名，并且是在冰火雷机制结束后才出现，因此比较简单，算是给玩家练习：分摊完火圈后第一个白圈爆炸，6秒死亡宣告的玩家去踩白圈消除，紧接着第二个白圈爆炸，10秒死亡宣告的玩家去踩白圈消除。最后BOSS会对MT使用五连巴哈姆特之爪，标志着进入第二次冰火雷。</p>
 									<br>
-									<p>接着是热离子光束/钢铁战车（分摊/分散）+救赎之翼（白圈）+火线判定。根据台词，如果是分摊，所有人在BOSS正面分摊热离子光束，随后分摊位置会出现白圈。为了保证所有人躲完白圈能够分摊到火圈，这里我们统一让所有人径直移动到BOSS背后躲开白圈同时分摊火线。</p>
+									<h4>第二次冰火雷+无台词</h4>
+									<p>BOSS在对MT使用巴哈姆特之爪的同时，会出现第二次火连线和双雷点名。根据进-出-进-进的原则，这三名玩家直接远离人群并且互相远离即可。这一次没有台词和光暗点名，非常简单。</p>
 									<br>
-									<p>如果是钢铁战车，那么所有人先远离BOSS躲开钢铁战车，然后在BOSS面前集合分摊火圈。这里注意，两个被雷点名的人在远离BOSS的时候，最好偏向集合的一侧远离，防止火圈来不及回到集合位置分摊。</p>
-									<br>
-									<p>第一句台词只会伴随6秒和10秒两个死亡宣告点名，并且是在冰火雷机制结束后才出现，因此比较简单，算是给玩家练习：分摊完火圈后第一个白圈爆炸，6秒死亡宣告的玩家去踩白圈消除，紧接着第二个白圈爆炸，10秒死亡宣告的玩家去踩白圈消除。被点名的玩家最后BOSS会对MT使用五连巴哈姆特之爪，标志着进入第二句台词。</p>
-									<br>
-									<hr>	
-									<br>
-									<p>BOSS在对MT使用巴哈姆特之爪的同时，会出现第二次火连线和双雷点名。根据进-出-进-进的原则，这三名玩家直接远离人群并且互相远离即可。</p>
-									<br>
-									<p>接着就是第二句台词，固定为下面两种：</p>
+									<h4>第三次冰火雷+奈尔台词</h4>
+									<p>第三次冰火雷时，奈尔会先说出第二句台词，固定为下面两种：</p>
 									<p>"Blazing path, lead me to conquest!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+钢铁战车</p>
 									<p>"O refulgent moon, shine down your light!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+月流电圈</p>
 									<br>
-									<p>也就是分摊+远离/靠近BOSS。被点名的三名玩家在引导完火圈和雷圈之后立刻回人群分摊。接着根据台词决定是远离躲开钢铁战车或者靠近躲开月流电圈。</p>
+									<p>也就是分摊+远离/靠近BOSS。在第二次冰火雷结束后，被点名的三名玩家立刻回人群分摊。接着根据台词决定是远离躲开钢铁战车或者靠近躲开月流电圈。台词机制处理结束后是第三次冰火雷+光暗点名，完整时间轴如下：</p>
+									<div id="p2.4-timeline-area" class="timeline-area"></div>
+									<div class="figure aligncenter">
+										<div>
+											<li>※P2第三次冰火雷点名完整时间轴</li>
+										</div>
+									</div>
 									<br>
-									<p>随后会出现三次救赎之翼的白圈，这一次死亡宣告的时间依次为6/10/16秒，玩家根据时间的多少依次踩白圈处理。</p>
+									<p>随后会出现三次救赎之翼的白圈，这一次死亡宣告的时间依次为6/10/16秒，玩家根据时间的多少依次踩白圈处理。雷点名的玩家在分散诱导雷圈出现后，所有人回BOSS正面分摊火线即可。</p>
 									<br>
-									<p>在第二个光圈爆炸的同时会出现第三次冰火雷点名，也是最难的一次，这一次光暗点名和冰火雷点名将会同时进行，因此运气不好一名玩家可能需要处理若干个机制。这里雷点名的玩家远离人群，其余玩家站在BOSS正面分摊火圈即可。由于火圈在最后一个判定的，假设死亡宣告的玩家中了雷，那么每个人的处理顺序应该是：6秒死亡宣告：踩第一个白圈→放雷→分摊火。10秒死亡宣告： 踩第二个白圈→放雷→分摊火。15秒死亡宣告：放雷→踩第三个白圈→分摊火。（优先处理死亡宣告和雷圈，即使第三次没踩到火圈，也可以在第四次进行补救）</p>
+									<p class="attention-part">※然而这个阶段冰火雷点名会在第二个救赎之翼的白圈爆炸的同时出现，也是最难的部分——运气不好一名玩家可能需要处理若干个机制。处理的关键在于所有人要非常清楚：如果自己同时被点名了火/雷/死亡宣告，处理的顺序是什么。首先没被点名的幸运玩家站在BOSS正面分摊火圈即可。</p><br>
+									<p class="attention-part">※着重说明一下复数点名的处理顺序供大家参考：<br>
+										<li>6秒死亡宣告：踩第一个白圈→放雷→分摊火。</li>
+										<li>10秒死亡宣告： 踩第二个白圈→放雷→分摊火。</li>
+										<li>15秒死亡宣告：放雷→踩第三个白圈→分摊火。</li>
+									</p>
+									<p class="attention-part">※请优先处理死亡宣告和雷圈，即使第三次没分摊到火圈，也可以在第四次冰火雷点名时进行补救。</li>
+									</p><br>
+									<p>火分摊后BOSS再次对MT使用巴哈姆特之爪，标志进入最后一次冰火雷点名。<br>
+
 									<br>
-									<p>火分摊后BOSS再次对MT使用巴哈姆特之爪，标志进入第三句台词。</p>
-									<br>
-									<hr>
-									<br>
-									<p>第三次台词固定为：</p>
+									<h4>第四次冰火雷+奈尔台词</h4>
+									<p>第三句奈尔的台词固定为：</p>
 									<p>"From on high I descend, mine enemies to smite!" &emsp;&emsp;&emsp;——&emsp;凶鸟冲+钢铁战车</p>
 									<p>"From on high I descend, in blessed light to bask!"&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
 									<br>
-									<p>也就是全员分散+远离/靠近BOSS。所有人先按分好的位置分散好，防止凶鸟冲靠的太近而被击退。凶鸟冲后，所有人根据台词决定是远离BOSS躲避钢铁战车或者靠近BOSS处理月流电圈。紧接着是火连线+双雷点名。火分摊依旧是在BOSS位置分摊，这里火连线分摊是为了防止前面有人错过火圈而做的保险，如果前面该分摊的时候都分摊到了，那么这次不分摊也没有关系。而这一次双雷的判定会比火圈判定晚，因此雷点名的玩家在火圈分摊后立刻远离人群即可（如果之前都处理正确，也可以不分摊直接远离人群诱导雷圈）。</p>
+									<p>也就是全员分散+远离/靠近BOSS。所有人先按分好的位置分散好，防止凶鸟冲靠的太近而被击退。凶鸟冲后，所有人根据台词决定是远离BOSS躲避钢铁战车或者靠近BOSS处理月流电圈。随后就是冰火雷机制，这一次冰火雷时间轴如下：</p>
+									<div id="p2.5-timeline-area" class="timeline-area"></div>
+									<div class="figure aligncenter">
+										<div>
+											<li>※P2第四次冰火雷点名完整时间轴</li>
+										</div>
+									</div>
+									<p class="attention-part">※第四次冰火雷相比第三次就简单一些。虽然机制依旧紧凑，但台词，冰火雷，光暗点名是先后出现彼此不重叠的。</p><br>
+									<p>台词处理完后首先是火连线+双雷点名。火分摊依旧回到BOSS正面分摊，这里火连线分摊是为了防止前面有人错过火圈而做的保险，如果前面该分摊的时候都分摊到了，那么这次不分摊也没有关系。而这一次双雷的判定时间会比火圈分摊晚，因此雷点名的玩家在火圈分摊后立刻远离人群即可（如果之前火分摊都处理正确→自己身上没有冰buff，也可以不分摊火→直接远离人群诱导雷圈）。</p><br>
+									<p class="attention-part">※由于第四次冰火雷之后还有一轮冰，因此所有人必须确保第四次火线结束后身上不能有冰buff。</p>
 									<br>
-									<p>三次救赎之翼会在最后出现，不会与冰火雷重叠，因此比较简单，跟之前一样按持续时间不同依次解除BUFF。处理完纳尔会对MT读条“凶鸟尖喙”，ST嘲讽换坦，标志台词阶段结束正式进入小龙俯冲阶段。</p>
-									<hr>
+									<p>三次救赎之翼会在最后出现，不会与冰火雷重叠，因此比较简单，跟之前一样按持续时间不同依次解除BUFF。处理完纳尔会对MT读条「凶鸟尖喙」，MT开启减伤，ST嘲讽换坦，「龙神的加护」阶段结束正式进入小龙俯冲阶段。</p>
 									<br>
-									<p>简单总结一下流程：</p><br>
+									<h4>「龙神的加护」流程总结</h4>
 									<li>第一次冰火雷：固定两种模式</li>
 									<li>第二次冰火雷（简单无台词）：火出去+雷远离</li>
-									<li>第三次冰火雷（最难）：先处理台词→踩白圈+雷分散→火分摊</li>
-									<li>第四次冰火雷（简单）：先处理台词→火分摊→雷分散→踩白圈</li>
+									<li>第三次冰火雷（最难）：先处理台词→根据buff时间：踩白圈，雷分散→火分摊</li>
+									<li>第四次冰火雷（简单）：先处理台词→火分摊→雷分散→依次踩白圈</li>
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
 										<img src="img/p2/p2-3.png" class="paragraph-title-img">	
@@ -400,13 +514,11 @@
 										<div class="title-hr"></div>
 									</div>
 									<h3>新增技能</h3>
-									<li>超新星：BOSS会点名玩家脚下出现黑圈，黑圈刚出现时第一段攻击只会对范围内的玩家造成轻微伤害。短暂延迟后，第二段攻击"万有引力"会将范围内的玩家拉到黑圈中新，造成伤害极高的出血效果。玩家被点名后需要及时远离黑圈范围。</li>
-									
-									<h3>阶段详解</h3>
+									<li>超新星：BOSS会点名玩家脚下出现黑圈，黑圈刚出现时第一段攻击只会对范围内的玩家造成轻微伤害。短暂延迟后，第二段攻击"万有引力"会将范围内的玩家拉到黑圈中心，造成伤害极高的出血效果。玩家被点名后需要及时远离黑圈范围。</li>
 									<h4>核心机制·小龙俯冲</h4>
-									<h5>机制分析</h5>
+									<h5>※机制分析</h5>
 									<p>P2开场，BOSS在读条龙神的加护后，场外会出现5条小龙。在P3俯冲阶段，将会有3名玩家被点名俯冲标记。接着，这五条小龙将会按顺时针2-1-2的顺序，从12点开始依次对标记消失的位置进行俯冲。也就是说，从12点开始顺时针第一二条龙将会俯冲第一个标记消失处，第三条龙俯冲第二个标记消失处，最后两条龙俯冲第三个标记消失处。</p>
-									<h5>处理方法</h5>
+									<h5>※处理方法</h5>
 									<p>如下图所示，首先标记第一组两条小龙：根据场地标点A迅速确定12点，然后顺时针找到2条小龙。如果两只小龙距离较近，就将标记放在两只小龙的一侧，反之则将标记放在两只小龙的之间。</p>
 									<p>接着标记第二组一条小龙：找到第三只小龙，将标记放在小龙的一侧。</p>
 									<p>最后标记第三组两条小龙：找到最后两条小龙，同第一组的标记方式相同处理。</p>
@@ -431,6 +543,7 @@
 		</div>
 	</div>
 	<script src="js/p1-timeline.js"></script>
+	<script src="js/p2-timeline.js"></script>
 	<script src="js/hover-global.js"></script>
 	<script src="js/status-database.js"></script>
 </body>
