--- a/bahamut/Bahamut.html
+++ b/bahamut/Bahamut.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/vis-global.css">
 	<link rel="stylesheet" type="text/css" href="css/content.css">
 	<link rel="stylesheet" type="text/css" href="css/status.css">
+	<link rel="stylesheet" type="text/css" href="css/edit-vis.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="https://momentjs.com/downloads/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
@@ -272,9 +273,9 @@
 										<div class="title-hr"></div>
 									</div>
 									<h4>基本技能</h4>
-									<li>普攻:每3秒对当前MT的单体攻击，中等「物理」「斩属性」伤害。
-									<li>垂直下落：「物理」顺劈技能。BOSS正前方扇形范围攻击，造成大量「物理」伤害。</li>
-									<li>死刑：换坦机制，死刑技能。对当前坦克造成特大「物理伤害」，并附加一层
+									<li>普攻:每3秒对当前MT的单体攻击，「斩击属性」中等伤害。
+									<li>垂直下落：顺劈技能，物理伤害。BOSS正前方扇形范围攻击，造成大量「物理」伤害。</li>
+									<li>死刑：换坦机制，死刑技能，物理伤害。对当前坦克造成特大伤害，并附加一层
 										<a  class="status-area" name="SlashingResistanceDownII">
 											<img src="img/status/SlashingResistanceDownII.png" alt="">
 											&nbsp;&nbsp;&nbsp;斩击耐性大幅降低
@@ -286,7 +287,7 @@
 											&nbsp;&nbsp;&nbsp;旋风
 										</a>
 										。玩家踩中旋风时，旋风将会爆炸秒杀上面的玩家，并将周围玩家击退到场地边缘导致死亡。玩家需要在判定前保持移动，躲开脚下的旋风。</li>
-									<li>火球：分摊机制。BOSS点名一名玩家头上出现
+									<li>火球：分摊机制，魔法伤害。BOSS点名一名玩家头上出现
 										<a  class="img-hover-area" name="firetriangle">
 											<img src="img/hover-sign.png" alt="">
 											&nbsp;&nbsp;&nbsp;红色三角标记
@@ -424,7 +425,7 @@
 									<p>组合技后是「死刑+垂直下落」，同P1阶段处理即可。这一次死刑时坦克的退避仍在CD，注意控制好仇恨（如果此时忍者有烟雾弹，影渡等技能也可使用）。</p><br>
 									<p>接着是组合技「魔力炼成x2+旋风」，除了这次是双黑球外与上一阶段处理方法相同。</p><br>
 									<p>最后是一次「垂直下落」，结束后进入循环——</p>
-									<p>「液体地狱（诱导）+黑球」→「液体地狱（诱导）+火球」→第四次死刑+顺劈→黑球+旋风。</p><br>
+									<p>「液体地狱（诱导）+黑球」→「液体地狱（随机）+火球」→第四次死刑+顺劈→黑球+旋风。</p><br>
 									<p>一般队伍能在2:50秒左右结束战斗，随后双塔尼亚将会飞走，标志P1结束。否则3:00时双塔尼亚将会变得不可选中并读条「以太狂暴」团灭队伍。</p><br>
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
